# autollmse-dl.skill

./: .gitignore  README.md  SKILL.md  __init__.py  __main__.py  pyproject.toml
autollmse_dl/: __init__.py  __main__.py  backup_manager.py  cli.py  compressor.py  configuration.py  importance_scoring.py  semantic_dedup.py
autollmse_dl/config/: compression_rules.json
config/: compression_rules.json
scripts/: backup_manager.py  compressor.py  importance_scoring.py  semantic_dedup.py
tests/: test_cross_platform.py
