[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autollmse-dl"
version = "0.1.0"
description = "Cross-platform Markdown memory compression for OpenClaw workspaces"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "DongLiyaaa" }
]
dependencies = []

[project.optional-dependencies]
semantic = [
  "numpy>=1.26",
  "sentence-transformers>=3.0"
]

[project.scripts]
autollmse-dl = "autollmse_dl.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autollmse_dl*"]

[tool.setuptools.package-data]
autollmse_dl = ["config/*.json"]
